fix blue faq on mobile safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,6 +92,7 @@ button.reset {
   padding: unset;
   margin: unset;
   background: unset;
+  color: unset;
   border: unset;
   cursor: pointer;
 }
